--- a/sidebar.yml
+++ b/sidebar.yml
@@ -1,5 +1,5 @@
 entries:
-  - title: FlexPod Express with Cisco UCS C-Series and AFF A220 Series
+  - title: FlexPod Express with Cisco UCS C-Series and NetApp AFF C190 Series
     url: /express-c-series-c190-design_executive_summary.html
     type: solution
     entries:
