--- a/express-c-series-aff220-deploy/sidebar.yml
+++ b/express-c-series-aff220-deploy/sidebar.yml
@@ -1,5 +1,5 @@
 section: express-c-series-aff220-deploy
-title: FlexPod Express with Cisco UCS C-Series and AFF A220 Series Deployment
+title: FlexPod Express with Cisco UCS C-Series and AFF A220 Series deployment guide
 entries:
   - title: FlexPod Express with VMware vSphere 6.7 and NetApp AFF A220
     url: /express-c-series-aff220-deploy/express-c-series-aff220-deploy_program_summary.html
