--- a/express-c-series-aff220-design/sidebar.yml
+++ b/express-c-series-aff220-design/sidebar.yml
@@ -1,5 +1,5 @@
 section: express-c-series-aff220-design
-title: FlexPod Express with Cisco UCS C-Series and AFF A220 Series
+title: FlexPod Express with Cisco UCS C-Series and AFF A220 Series design guide
 entries:
   - title: Executive summary
     url: /express-c-series-aff220-design/express-c-series-aff220-design_executive_summary.html
