Corrected page formatting, added summmaries, keywords, and links

--- a/project.yml
+++ b/project.yml
@@ -7,3 +7,4 @@ sidebar:
     - section: express-c-series-aff220-design
     - section: express-c-series-aff220-deploy
     - section: express-direct-attach-design
+    - section: ndac4693
