--- a/express-c-series-aff220-deploy/sidebar.yml
+++ b/express-c-series-aff220-deploy/sidebar.yml
@@ -3,6 +3,7 @@ title: FlexPod Express with Cisco UCS C-Series and AFF A220 Series deployment gu
 entries:
   - title: FlexPod Express with VMware vSphere 6.7 and NetApp AFF A220
     url: /express-c-series-aff220-deploy/express-c-series-aff220-deploy_program_summary.html
+    type: solutions
   - title: Solution overview
     url: /express-c-series-aff220-deploy/express-c-series-aff220-deploy_solution_overview.html
   - title: Technology requirements
