--- a/express-c-series-aff220-design/sidebar.yml
+++ b/express-c-series-aff220-design/sidebar.yml
@@ -3,6 +3,7 @@ title: FlexPod Express with Cisco UCS C-Series and AFF A220 Series design guide
 entries:
   - title: Executive summary
     url: /express-c-series-aff220-design/express-c-series-aff220-design_executive_summary.html
+    type: solutions
   - title: Program summary
     url: /express-c-series-aff220-design/express-c-series-aff220-design_program_summary.html
   - title: Solution overview
