--- a/express-c-series-c190-design/sidebar.yml
+++ b/express-c-series-c190-design/sidebar.yml
@@ -3,6 +3,7 @@ title: FlexPod Express with Cisco UCS C-Series and NetApp AFF C190 Series
 entries:
   - title: Executive summary
     url: /express-c-series-c190-design/express-c-series-c190-design_executive_summary.html
+    type: solutions
   - title: Program summary
     url: /express-c-series-c190-design/express-c-series-c190-design_program_summary.html
   - title: Technology requirements
