--- a/ontap-connector-for-intersight/sidebar.yml
+++ b/ontap-connector-for-intersight/sidebar.yml
@@ -3,6 +3,7 @@ title: Cisco Intersight with NetApp ONTAP storage quick start guide
 entries:
   - title: Introduction
     url: /ontap-connector-for-intersight/index.html
+    type: solutions
   - title: Requirements
     url: /ontap-connector-for-intersight/ci-qsg_requirements.html
   - title: Before you begin
