--- a/ehr-epic-performance/sidebar.yml
+++ b/ehr-epic-performance/sidebar.yml
@@ -1,5 +1,17 @@
 section: ehr-epic-performance
 title: FlexPod for Epic performance testing
 entries:
-  - title: FlexPod for Epic performance testing
-    url: https://www.netapp.com/pdf.html?item=/media/12436-tr4784pdf.pdf
+  - title: FlexPod for Epic Performance Testing
+    url: /ehr-epic-performance/ehr-epic-performance_introduction.html
+  - title: Executive Summary
+    url: /ehr-epic-performance/ehr-epic-performance_executive_summary.html
+  - title: Test Methodology
+    url: /ehr-epic-performance/ehr-epic-performance_test_methodology.html
+  - title: Workload Testing
+    url: /ehr-epic-performance/ehr-epic-performance_workload_testing.html
+  - title: Conclusion
+    url: /ehr-epic-performance/ehr-epic-performance_conclusion.html
+  - title: Additional Information
+    url: /ehr-epic-performance/ehr-epic-performance_additional_information.html
+  - title: Acknowledgements
+    url: /ehr-epic-performance/ehr-epic-performance_acknowledgements.html
