--- a/security-ransomware/sidebar.yml
+++ b/security-ransomware/sidebar.yml
@@ -1,5 +1,19 @@
 section: security-ransomeware
 title: FlexPod - the solution to Ransomware
 entries:
-  - title: FlexPod - the solution to Ransomware
-    url: https://www.netapp.com/pdf.html?item=/media/12428-tr4802pdf.pdf
+  - title: FlexPod, The Solution to Ransomware
+    url: /security-ransomware/security-ransomware_what_is_ransomware?.html
+  - title: FlexPod Overview
+    url: /security-ransomware/security-ransomware_flexpod_overview.html
+  - title: Ransomware Protection Measures
+    url: /security-ransomware/security-ransomware_ransomware_protection_measures.html
+  - title: Protect and Recover Data on FlexPod
+    url: /security-ransomware/security-ransomware_protect_and_recover_data_on_flexpod.html
+  - title: Continue Business Operations Without Paying Ransom
+    url: /security-ransomware/security-ransomware_continue_business_operations_without_paying_ransom.html
+  - title: Conclusion
+    url: /security-ransomware/security-ransomware_conclusion.html
+  - title: Acknowledgements
+    url: /security-ransomware/security-ransomware_acknowledgements.html
+  - title: Additional Information
+    url: /security-ransomware/security-ransomware_additional_information.html
