--- a/security-ransomware/sidebar.yml
+++ b/security-ransomware/sidebar.yml
@@ -2,7 +2,7 @@ section: security-ransomeware
 title: FlexPod - the solution to Ransomware
 entries:
   - title: FlexPod, The Solution to Ransomware
-    url: /security-ransomware/security-ransomware_what_is_ransomware?.html
+    url: /security-ransomware/security-ransomware_what_is_ransomware.html
   - title: FlexPod Overview
     url: /security-ransomware/security-ransomware_flexpod_overview.html
   - title: Ransomware Protection Measures
