--- a/express-direct-attach-aff220-deploy/sidebar.yml
+++ b/express-direct-attach-aff220-deploy/sidebar.yml
@@ -3,6 +3,7 @@ title: FlexPod Express with VMware vSphere 6.7U1 and NetApp AFF A220 with Direct
 entries:
   - title: FlexPod Express with VMware vSphere 6.7U1 and NetApp AFF A220 with Direct-Attached IP-Based Storage
     url: /express-direct-attach-aff220-deploy/express-direct-attach-aff220-deploy_program_summary.html
+    type: solutions
   - title: Solution Overview
     url: /express-direct-attach-aff220-deploy/express-direct-attach-aff220-deploy_solution_overview.html
   - title: Technology Requirements
