Two more docs complete.

--- a/cloud-insights/sidebar.yml
+++ b/cloud-insights/sidebar.yml
@@ -3,6 +3,7 @@ title: NetApp Cloud Insights for FlexPod
 entries:
   - title: NetApp Cloud Insights for FlexPod
     url: /cloud-insights/cloud-insights_netapp_cloud_insights_for_flexpod.html
+    type: solutions
   - title: Use Cases
     url: /cloud-insights/cloud-insights_use_cases.html
   - title: Architecture
