Remove branch-point docs from sidebars.

--- a/express/sidebar.yml
+++ b/express/sidebar.yml
@@ -2,9 +2,10 @@ section: express
 title: FlexPod Express
 entries:
   - title: FlexPod Express with Cisco UCS C-Series and NetApp AFF C190 Series Design Guide
-    url: /express/express-c-series-c190-design_executive_summary.html
     type: solutions
     entries:
+      - title: Overview
+        url: /express/express-c-series-c190-design_executive_summary.html
       - title: Program summary
         url: /express/express-c-series-c190-design_program_summary.html
       - title: Technology requirements
@@ -17,9 +18,10 @@ entries:
         url: /express/express-c-series-c190-design_where_to_find_additional_information.html
 
   - title: FlexPod Express with Cisco UCS C-Series and NetApp AFF C190 Series Deployment Guide
-    url: /express/express-c-series-c190-deploy_program_summary_overview.html
     type: solutions
     entries:
+        - title: Overview
+          url: /express/express-c-series-c190-deploy_program_summary_overview.html
         - title: Solution overview
           url: /express/express-c-series-c190-deploy_solution_overview.html
         - title: Technology requirements
@@ -56,9 +58,10 @@ entries:
           url: /express/express-c-series-c190-deploy_version_history.html
 
   - title: FlexPod Express with Cisco UCS C-Series and AFF A220 Series Design Guide
-    url: /express/express-c-series-aff220-design_executive_summary.html
     type: solutions
     entries:
+      - title: Overview
+        url: /express/express-c-series-aff220-design_executive_summary.html
       - title: Program summary
         url: /express/express-c-series-aff220-design_program_summary.html
       - title: Solution overview
@@ -75,9 +78,10 @@ entries:
         url: /express/express-c-series-aff220-design_where_to_find_additional_information.html
 
   - title: FlexPod Express with Cisco UCS C-Series and AFF A220 Series Deployment Guide
-    url: /express/express-c-series-aff220-deploy_program_summary.html
     type: solutions
     entries:
+      - title: Overview
+        url: /express/express-c-series-aff220-deploy_program_summary.html
       - title: Solution overview
         url: /express/express-c-series-aff220-deploy_solution_overview.html
       - title: Technology requirements
@@ -107,9 +111,10 @@ entries:
         url: /express/express-c-series-aff220-deploy_where_to_find_additional_information.html
 
   - title: FlexPod Express with VMware vSphere 6.7U1 and NetApp AFF A220 with Direct-Attached IP-Based Storage Design Guide
-    url: /express/express-direct-attach-design_overview.html
     type: solutions
     entries:
+      - title: Overview
+        url: /express/express-direct-attach-design_overview.html
       - title: Program summary
         url: /express/express-direct-attach-design_program_summary.html
       - title: Solution overview
@@ -126,9 +131,10 @@ entries:
         url: /express/express-direct-attach-design_where_to_find_additional_information.html
 
   - title: FlexPod Express with VMware vSphere 6.7U1 and NetApp AFF A220 with Direct-Attached IP-Based Storage
-    url: /express/express-direct-attach-aff220-deploy_program_summary.html
     type: solutions
     entries:
+      - title: Overview
+        url: /express/express-direct-attach-aff220-deploy_program_summary.html
       - title: Solution Overview
         url: /express/express-direct-attach-aff220-deploy_solution_overview.html
       - title: Technology Requirements
